@startuml cfa
left to right direction
class CFA {
    -vars: VarDecl[0..*] 
}
class Location {
    -isInit: Boolean
    -isError: Boolean
    -isFinal: Boolean
}
class Edge {}
abstract class Label {}

CFA *-- "1..*\nedges" Edge
Edge *-- "source" Location
Edge *-- "target" Location
Edge *-- "label" Label
@enduml